<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F8F8F8"
    tools:context=".MainActivity">

    <!--top black bar-->
    <Button
        android:id="@+id/open"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:text="Open"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.996"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="12dp" />

    <RelativeLayout
        android:id="@+id/device_info"
        android:layout_width="321dp"
        android:layout_height="48dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/device_info"
        app:layout_constraintBottom_toTopOf="@+id/general_inf"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.722">

        <TextView
            android:id="@+id/condition"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="40dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:gravity="top"
            android:text="@string/condition"
            android:textAppearance="@style/condition" />

    </RelativeLayout>


    <!--    middle section-->
    <RelativeLayout
        android:id="@+id/general_inf"
        android:layout_width="318dp"
        android:layout_height="450.6dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="131dp"
        android:background="@drawable/general_inf"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/damage_info"
            android:layout_width="136dp"
            android:layout_height="121dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="166dp"
            android:layout_marginBottom="17dp"
            android:orientation="vertical"
            android:background="@drawable/damage_info">

            <TextView
                android:id="@+id/damage_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/damage_status"
                android:textAppearance="@style/damage_status" />

            <TextView
                android:id="@+id/damage_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:lineSpacingExtra="0sp"
                android:layout_margin="10dp"
                android:text="@string/damage_title"
                android:textAppearance="@style/damage_title" />

            <TextView
                android:id="@+id/damage_desc"
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:layout_margin="0dp"
                android:layout_gravity="center"
                android:lineSpacingExtra="0sp"
                android:text="@string/damage_desc"
                android:textAppearance="@style/damage_desc" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/open_info"
            android:layout_width="136dp"
            android:layout_height="121dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="169dp"
            android:layout_marginEnd="13dp"
            android:layout_marginBottom="18dp"
            android:background="@drawable/damage_info"
            android:orientation="vertical">

            <TextView
                android:id="@+id/open_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/open_status"
                android:textAppearance="@style/open_status" />

            <TextView
                android:id="@+id/open_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:lineSpacingExtra="0sp"
                android:layout_margin="10dp"
                android:text="@string/open_title"
                android:textAppearance="@style/open_title" />

            <TextView
                android:id="@+id/open_desc"
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:layout_margin="0dp"
                android:layout_gravity="center"
                android:lineSpacingExtra="0sp"
                android:text="@string/open_desc"
                android:textAppearance="@style/open_desc" />
        </LinearLayout>

        <ImageView
            android:id="@+id/suitcase_imageView"
            android:layout_width="249dp"
            android:layout_height="344dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="34dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="35dp"
            android:layout_marginBottom="105dp"
            app:srcCompat="@drawable/suitcase"
            android:contentDescription="@string/suitcase_image" />

    </RelativeLayout>

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:textAppearance="@style/title"
        app:layout_constraintBottom_toTopOf="@+id/info_list_c"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.169"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/general_inf"
        app:layout_constraintVertical_bias="0.235" />

    <LinearLayout
        android:id="@+id/info_list_c"
        android:layout_width="321dp"
        android:layout_height="68dp"
        android:background="@drawable/info_list_c"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/general_inf"
        tools:ignore="MissingConstraints" >
    <TextView
        android:id="@+id/suitcase_info_title"
        android:layout_width="116dp"
        android:layout_height="18dp"
        android:text="@string/suitcase_info_title"
        android:textAppearance="@style/suitcase_info_title"
        android:layout_gravity="center"
        android:layout_margin="40dp"/>
    <TextView
        android:id="@+id/damage_time"
        android:layout_width="wrap_content"
        android:layout_height="10dp"
        android:text="@string/damage_time"
        android:textAppearance="@style/damage_time"
        android:layout_gravity="center" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
